Fixing whitespace issues

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -19,7 +19,7 @@
     height: 735px;
 }
 
-#MainTrailer { 
+#mainTrailer { 
     width: 95%;    
 }
 
